# opentelemetry-instrumentation-django-outbox-pattern

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  azure-pipelines.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  sonar-project.properties
.github/: dependabot.yml
opentelemetry_instrumentation_django_outbox_pattern/: __init__.py  package.py
opentelemetry_instrumentation_django_outbox_pattern/instrumentors/: consumer_instrument.py  publisher_instrument.py
opentelemetry_instrumentation_django_outbox_pattern/utils/: formatters.py  span.py
scripts/: start-tests.sh
tests/: conftest.py  settings.py  test_django_outbox_pattern_instrumentor.py
tests/instrumentors/: test_consumer_instrument.py  test_publisher_instrument.py
tests/support/: helpers_tests.py  otel_helpers.py
tests/utils/: test_django_outbox_pattern_getter.py  test_django_stomp_getter.py  test_formatters.py  test_span.py  test_traced_thread_pool_executor.py
