[tool.poetry]
name = "opentelemetry-instrumentation-django-outbox-pattern"
version = "0.0.1"
description = "Opentelemetry instrumentor for django-outbox-pattern package"
authors = ["Juntos Somos Mais <labs@juntossomosmais.com.br>"]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE",
]
homepage = "https://github.com/juntossomosmais/opentelemetry-instrumentation-django-outbox-pattern"
repository = "https://github.com/juntossomosmais/opentelemetry-instrumentation-django-outbox-pattern"
keywords=["django-outbox-pattern", "stomp", "django", "opentelemetry", "instrumentation"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "*"
django-outbox-pattern = "*"
opentelemetry-sdk = "*"
opentelemetry-api = "*"
opentelemetry-instrumentation = "*"

[tool.poetry.dev-dependencies]
### Tests Runner
tox = "*"
trio = "*"
pytest-trio = "*"

### Pytest: Essentials
pytest = "*"
pytest-mock = "*"
pytest-django = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"

### Pytest: Add-ons
pytest-icdiff = "*"
pytest-clarity = "*"

### Format, lint, static type checker, among others
black = "*"
mypy = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
autoflake = "*"
pre-commit = "*"
types-requests = "*"

[tool.black]
line-length = 120
target_version = ["py37"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
